[package]
name = "breakpad"
version = "0.1.0"
build = "build.rs"
authors = ["Jan Michael Auer <jan.auer@sentry.io>"]
keywords = ["breakpad", "crashpad", "minidump"]
description = "Basic breakpad/crashpad wrapper for Rust"
documentation = "https://docs.rs/breakpad"
homepage = "https://github.com/getsentry/breakpad"
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]
error-chain = "0.11"
uuid = { version = "0.5", features = ["use_std"] }

[dev-dependencies]
difference = "1.0"
